# Vita-PluginInstaller

./: .gitignore  CMakeLists.txt  README.md  actionsCmp.sh  compile_commands.json  plugin.ini
src/: main.c
src/kern/: CMakeLists.txt  kern-plug.c
